(fix): pulsator going off screen

--- a/src/app/modules/groups/sidebar-markers/sidebar-markers.component.scss
+++ b/src/app/modules/groups/sidebar-markers/sidebar-markers.component.scss
@@ -248,6 +248,25 @@ m-group--sidebar-markers {
     }
   }
 
+  .has-gathering::after {
+    border-radius: 50%;
+    display: block;
+    height: 8px;
+    width: 8px;
+    content: '';
+    position: absolute;
+    top: calc(50% - 4px);
+    right: 16px;
+    animation: pulse--small 1.5s infinite;
+    @include m-theme() {
+      background-color: themed($m-alert);
+    }
+
+    @media screen and (max-width: $layoutMax3ColWidth) {
+      right: 6px;
+    }
+  }
+
   .m-tooltip--bubble--anchor-right {
     margin-top: -36px;
     text-align: right;
